--- a/ayubresume.html
+++ b/ayubresume.html
@@ -15,7 +15,7 @@
 
 <body>
     <center>
-<img src="C:\Users\student.msalad69\Downloads\ggayub.jpg" width="100" height="100">
+<img src="https://github.com/AyubFG/thelast.index/blob/main/ggayub.jpg" width="100" height="100">
 <h1>
     Ayub Abdirahman
 </h1>
